# bootcamp

./: Daily_Log.md
Day0/ex-basics-1/: .gitignore  README.md  pyproject.toml
Day0/ex-basics-2/: .gitignore  README.md  pyproject.toml
Day0/ex-basics-3/: README.md  pyproject.toml
Day0/ex-basics-3/src/ex_basics_3/: main.py
Day0/ex-basics-3/src/shreyas_hello/: main.py
Day0/ex-tools-1/: README.md  index.html
Day1/: README.md
Day1/Architectural_Documentation/: README.md
Day1/Google_Docs/: docs.md
Day1/mkdocs-project/: README.md  mkdocs.yml  requirements.txt
Day2/exercises/section-7/mypkg_project/: pyproject.toml
Day2/exercises/section-7/mypkg_project/mypkg/: cli.py
dataflow-framework/: .gitignore  pyproject.toml
dataflow-framework/abstraction-level-0/: README.md  abstraction-level-0.cast  input.txt  process.py
dataflow-framework/abstraction-level-1/: .env  README.md  abstraction-level-1.cast  input.txt  process.py  snakecase_out.txt  uppercase_output.txt
dataflow-framework/abstraction-level-2/: .env  README.md  abstraction-level-2.cast  cli.py  core.py  input.txt  main.py  out.txt  pipeline.py  typess.py  uppercase_out.txt
dataflow-framework/abstraction-level-3/: README.md  abstraction-level-3.cast  cli.py  core.py  input.txt  main.py  pipeline.py
dataflow-framework/abstraction-level-4/: README.md  abstraction-level-4.cast  cli.py  core.py  input.txt  main.py  output.txt  pipeline.py  processed_types.py
dataflow-framework/abstraction-level-5/: README.md  abstraction-level-5.cast  cli.py  engine.py  input.txt  main.py  pipeline.yaml  (+2 more)
(+269 files in other folders)
