[project]
name = "ex-basics-3"
version = "0.1"
description = "ex-basics-3 -> Command Line Calculator Application using Typer and Rich (for colored output)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.15.3",
]

[project.scripts]
calc-cli = "ex_basics_3.main:app"